# nfa-program-parser

./: .gitignore  CMakeLists.txt  README.md  build-python.sh  build.sh
automata/: aut3.mata  aut4.mata
programs/: compl.emp  concat-long.emp  concat.emp  incl.emp  inter.emp  interall.emp  unionall.emp
python/: pyproject.toml
python/pyinterpret/: interpret.py  utils.py
python/pyinterpret/engines/: base.py  mata_engine.py
src/: CMakeLists.txt  interpreter.cc  interpreter_awali.cc  interpreter_debug.cc  interpreter_mata.cc  interpreter_mona.cc  interpreter_vata.cc  mona_mata.h  parser.h
src/cpp/: interpreter_awali.cc  interpreter_debug.cc  interpreter_mata.cc  interpreter_mona.cc  interpreter_vata.cc  mona_mata.h
src/cpp/interpreter/: interpreter.h  parser.h
src/cpp/utils/: common.h  util.h
src/interpreter/: interpreter.h  parser.h
src/python/: Makefile  pyproject.toml
src/python/pyinterpret/: interpret.py
src/python/pyinterpret/engines/: automatalib_engine.py  base.py  fado_engine.py  mata_engine.py
