[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyinterpret"
description = "Python Interpret of NFA .emp programs"
version = "0.1.0"
requires-python = ">=3.10"
authors = [
    {name = "Tomas Fiedor", email = "TomasFiedor@gmail.com"}
]
dependencies = [
    "libmata>=0.102.0",
    "automata-lib>=8.0.0",
    "fado>=2.1.2"
]

[project.scripts]
pyinterpret = "pyinterpret.interpret:launch"

[tool.setuptools]
py-modules = ["pyinterpret"]
package-dir = {"pyinterpret" = "pyinterpret"}

[tool.setuptools.packages.find]
where = ["."]
include = [
    "pyinterpret",
    "pyinterpret*",
]
namespaces = true